applications/service-envs/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farming-deployment
  namespace: _{_NAMESPACE_}_
spec:
  replicas: _{_REPLICAS_}_
  # replicas: 2
  selector:
    matchLabels:
      app: farming
  template:
    metadata:
      labels:
        app: farming
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: farming
      containers:
      - name: farming
        image: _{_IMAGE_}_
        # image: lukhee/bg-agric-os:farming
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/farmers
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/farmers
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
  strategy:
    type: RollingUpdate  # Default strategy, updates pods in a rolling manner
    rollingUpdate:
      maxSurge: 1  # Maximum number of pods that can be created beyond replicas during an update
      maxUnavailable: 1
